--- a/Front/ProEventos-App/src/app/components/user/login/login.component.html
+++ b/Front/ProEventos-App/src/app/components/user/login/login.component.html
@@ -4,15 +4,15 @@
 
     <form #loginForm="ngForm" class="form-signin" (ngSubmit)="login()">
       <i class="fa fa-users mb-2"></i>
-      <h1 class="h3 mb-3 font-weight-normal">Entrar com</h1>
-      <label for="username" class="sr-only">Usuário</label>
+      <h1 class="h3 mb-3 font-weight-normal">Login</h1>
+      <label for="username" class="sr-only">User</label>
       <input
         [(ngModel)]="model.userName"
         name="username"
         type="email"
         id="username"
         class="form-control"
-        placeholder="Usuário"
+        placeholder="User"
         required
       >
       <label for="password" class="sr-only">Password</label>
@@ -22,12 +22,12 @@
         type="password"
         id="password"
         class="form-control"
-        placeholder="Senha"
+        placeholder="Password"
         required
       >
-      <button [disabled]="loginForm.invalid" class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
-      <p class="mt-4 mb-2 text-muted">Não tem login? Cadastre-se abaixo</p>
-      <a class="btn btn-lg btn-link btn-block" routerLink="/user/registration">Quero me cadastrar</a>
+      <button [disabled]="loginForm.invalid" class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
+      <p class="mt-4 mb-2 text-muted">Don't have login? Register below.</p>
+      <a class="btn btn-lg btn-link btn-block" routerLink="/user/registration">I want to sign up!</a>
     </form>
 
   </div>
