--- a/Front/ProEventos-App/src/app/components/user/perfil/perfil-detalhe/perfil-detalhe.component.html
+++ b/Front/ProEventos-App/src/app/components/user/perfil/perfil-detalhe/perfil-detalhe.component.html
@@ -1,10 +1,10 @@
 <form [formGroup]="form" (submit)="onSubmit()">
   <div class="form-row">
     <div class="form-group col-12">
-      <h3 class="border-bottom">Detalhe Perfil</h3>
+      <h3 class="border-bottom">Perfil Details</h3>
     </div>
     <div class="form-group col">
-      <label>Título</label>
+      <label>Title</label>
       <select formControlName="titulo" class="form-control"
       [ngClass]="{ 'is-invalid': f.titulo.errors && f.titulo.touched }">
       <option value="NaoInformado">Não Quero</option>
@@ -21,7 +21,7 @@
     </div>
   </div>
   <div class="form-group col-sm-5">
-    <label>Primeiro Nome</label>
+    <label>First Name</label>
     <input type="text" formControlName="primeiroNome" class="form-control"
     [ngClass]="{ 'is-invalid': f.primeiroNome.errors && f.primeiroNome.touched }" />
     <div *ngIf="f.primeiroNome.errors && f.primeiroNome.touched" class="invalid-feedback">
@@ -29,7 +29,7 @@
     </div>
   </div>
   <div class="form-group col-sm-5">
-    <label>Último nome</label>
+    <label>Last Name</label>
     <input type="text" formControlName="ultimoNome" class="form-control"
     [ngClass]="{ 'is-invalid': f.ultimoNome.errors && f.ultimoNome.touched }" />
     <div *ngIf="f.ultimoNome.errors && f.ultimoNome.touched" class="invalid-feedback">
@@ -39,7 +39,7 @@
 </div>
 <div class="form-row">
   <div class="form-group col-sm-5">
-    <label>E-mail</label>
+    <label>Email</label>
     <input type="text" formControlName="email" class="form-control"
     [ngClass]="{ 'is-invalid': f.email.errors && f.email.touched }" />
     <div *ngIf="f.email.errors && f.email.touched" class="invalid-feedback">
@@ -48,7 +48,7 @@
     </div>
   </div>
   <div class="form-group col-sm-4">
-    <label>Telefone</label>
+    <label>Phone Number</label>
     <input type="text" formControlName="phoneNumber" class="form-control"
     [ngClass]="{ 'is-invalid': f.phoneNumber.errors && f.phoneNumber.touched }" />
     <div *ngIf="f.phoneNumber.errors && f.phoneNumber.touched" class="invalid-feedback">
@@ -56,7 +56,7 @@
     </div>
   </div>
   <div class="form-group col-sm">
-    <label>Função</label>
+    <label>Function</label>
     <select formControlName="funcao" class="form-control"
     [ngClass]="{ 'is-invalid': f.funcao.errors && f.funcao.touched }">
     <option value="NaoInformado">Não Informado</option>
@@ -68,7 +68,7 @@
   </div>
 </div>
 <div class="form-group col-12">
-  <label>Descrição</label>
+  <label>Description</label>
   <input type="text" formControlName="descricao" class="form-control"
   [ngClass]="{ 'is-invalid': f.descricao.errors && f.descricao.touched }" />
   <div *ngIf="f.descricao.errors && f.descricao.touched" class="invalid-feedback">
@@ -77,12 +77,12 @@
 </div>
 </div>
 <div>
-  <h3 class="pt-3 border-bottom">Mudar Senha</h3>
+  <h3 class="pt-3 border-bottom">Change Password</h3>
   <p>Caso mude de senha, preencha os campos abaixo:</p>
 </div>
 <div class="form-row">
   <div class="form-group col-sm">
-    <label>Senha</label>
+    <label>Password</label>
     <input type="password" formControlName="password" class="form-control"
     [ngClass]="{ 'is-invalid': f.password.errors && f.password.touched }" />
     <div *ngIf="f.password.errors && f.password.touched" class="invalid-feedback">
@@ -91,7 +91,7 @@
     </div>
   </div>
   <div class="form-group col-sm">
-    <label>Confirmar Senha</label>
+    <label>Confirm Password</label>
     <input type="password" formControlName="confirmePassword" class="form-control"
     [ngClass]="{ 'is-invalid': f.confirmePassword.errors && f.confirmePassword.touched }" />
     <div *ngIf="f.confirmePassword.errors && f.confirmePassword.touched" class="invalid-feedback">
@@ -104,10 +104,10 @@
 <div class="card-footer">
   <div class="d-flex">
     <button (click)="resetForm($event)" class="btn btn-outline-secondary mr-auto border">
-      Cancelar Alteração
+      Cancel Change
     </button>
     <button class="btn btn-success" type="submit">
-      Salvar Alteração
+      Save Change
     </button>
   </div>
 </div>
