--- a/Front/ProEventos-App/src/app/shared/nav/nav.component.html
+++ b/Front/ProEventos-App/src/app/shared/nav/nav.component.html
@@ -14,19 +14,19 @@
             <a class="nav-link" aria-current="page" routerLink="dashboard">Dashboard</a>
           </li>
           <li class="nav-item" routerLinkActive="active">
-            <a class="nav-link" aria-current="page" routerLink="eventos/lista">Eventos</a>
+            <a class="nav-link" aria-current="page" routerLink="eventos/lista">Events</a>
           </li>
           <li class="nav-item" routerLinkActive="active">
-            <a class="nav-link" routerLink="palestrantes">Palestrantes</a>
+            <a class="nav-link" routerLink="palestrantes">Speaker</a>
           </li>
           <li class="nav-item" routerLinkActive="active">
-            <a class="nav-link" routerLink="contatos">Contatos</a>
+            <a class="nav-link" routerLink="contatos">Contacts</a>
           </li>
         </ng-container>
       </ul>
       <div *ngIf="(accountService.currentUser$ | async) === null" class="navbar-nav mr-3 d-xs-none d-none d-md-block">
-        <a class="btn btn-light mr-2 border" routerLink="/user/login">Entrar</a>
-        <a class="btn btn-warning" routerLink="/user/registration">Me Cadastrar</a>
+        <a class="btn btn-light mr-2 border" routerLink="/user/login">login</a>
+        <a class="btn btn-warning" routerLink="/user/registration">Register</a>
       </div>
       <ul *ngIf="(accountService.currentUser$ | async) !== null" class="navbar-nav">
         <li class="nav-item dropdown" dropdown *ngIf="(accountService.currentUser$ | async) as user">
@@ -40,7 +40,7 @@
             </a>
             <div role="separator" class="divider"></div>
             <a (click)="logout()" class="dropdown-item" style="cursor: pointer;">
-              Sair
+              LogOut
             </a>
           </div>
         </li>
