--- a/Front/ProEventos-App/src/app/components/palestrantes/palestrante-lista/palestrante-lista.component.html
+++ b/Front/ProEventos-App/src/app/components/palestrantes/palestrante-lista/palestrante-lista.component.html
@@ -27,7 +27,7 @@
           </div>
           <div class="card-body">
             <div class="h4 text-center mb-3">@{{palestrante.user.userName}}</div>
-            <div class="h7 text-bold pb-1"><b>Nome:</b> {{palestrante.user.primeiroNome + ' ' + palestrante.user.ultimoNome}}</div>
+            <div class="h7 text-bold pb-1"><b>Name:</b> {{palestrante.user.primeiroNome + ' ' + palestrante.user.ultimoNome}}</div>
             <div class="h7">
               {{palestrante.miniCurriculo}}
             </div>
@@ -37,11 +37,11 @@
               <div class="row">
                 <div class="col-6 text-center border-right">
                   <div class="h5">0</div>
-                  <div class="h6 text-muted">Meus Eventos Criados</div>
+                  <div class="h6 text-muted">My Events Created</div>
                 </div>
                 <div class="col-6 text-center">
                   <div class="h5">0</div>
-                  <div class="h6 text-muted">Eventos como Palestrante</div>
+                  <div class="h6 text-muted">Events as Speaker</div>
                 </div>
               </div>
             </li>
