--- a/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
@@ -5,17 +5,17 @@
         <div class="p-3">
           <div class="form-row">
             <div class="form-group col-md-12">
-              <label>Tema</label>
+              <label>Theme</label>
               <input type="text" class="form-control" [ngClass]="cssValidator(f.tema)" formControlName="tema"
               placeholder="Insira o Tema" [(ngModel)]="evento.tema">
               <div *ngIf="f.tema.errors?.required" class="invalid-feedback">
-                Tema é obrigatório.
+                Theme is mandatory.
               </div>
               <div *ngIf="f.tema.errors?.minlength" class="invalid-feedback">
-                Tema deve ter no mínimo 4 caracteres.
+                Theme must be at least 4 characters.
               </div>
               <div *ngIf="f.tema.errors?.maxlength" class="invalid-feedback">
-                Tema deve ter no máximo 50 caracteres.
+                Theme must have a maximum 50 characters.
               </div>
             </div>
           </div>
@@ -25,48 +25,48 @@
               <input type="text" class="form-control" [ngClass]="cssValidator(f.local)"
               formControlName="local" placeholder="" [(ngModel)]="evento.local">
               <div *ngIf="f.local.errors?.required && f.local.touched" class="invalid-feedback">
-                Local é obrigatório.
+                Local is mandatory.
               </div>
             </div>
             <div class="form-group col-md-4">
-              <label>Data e Hora</label>
+              <label>Date and Time</label>
               <input type="datetime" class="form-control" [ngClass]="cssValidator(f.dataEvento)"
               value="{{evento.dataEvento | DateFormatPipe}}" bsDatepicker [bsConfig]="bsConfig" formControlName="dataEvento"
               placeholder="" [(ngModel)]="evento.dataEvento">
               <div *ngIf="f.dataEvento.errors?.required && f.dataEvento.touched" class="invalid-feedback">
-                Data e Hora é obrigatório.
+                Date and Time are mandatory.
               </div>
             </div>
           </div>
           <div class="form-row">
             <div class="form-group col-md-2">
-              <label>Qtd Pessoas</label>
+              <label>Qtd People</label>
               <input type="number" class="form-control" [ngClass]="cssValidator(f.qtdPessoas)" formControlName="qtdPessoas"
               placeholder="" [(ngModel)]="evento.qtdPessoas">
               <div *ngIf="f.qtdPessoas.errors?.required && f.qtdPessoas.touched" class="invalid-feedback">
-                Qtd Pessoas é obrigatório.
+                Qtd People are mandatory.
               </div>
               <div *ngIf="f.qtdPessoas.errors?.max && f.qtdPessoas.touched" class="invalid-feedback">
-                Qtd Pessoas deve ser menor que 120000.
+                Qtd People must be at least 120000.
               </div>
             </div>
             <div class="form-group col-md-4">
-              <label>Telefone</label>
+              <label>Phone number</label>
               <input type="text" class="form-control" [ngClass]="cssValidator(f.telefone)"
               formControlName="telefone" placeholder="(000) 90000-0000" [(ngModel)]="evento.telefone">
               <div *ngIf="f.telefone.errors?.required && f.telefone.touched" class="invalid-feedback">
-                Telefone é obrigatório.
+                Phone number is mandatory.
               </div>
             </div>
             <div class="form-group col-md-6">
-              <label>e-mail</label>
+              <label>email</label>
               <input type="text" class="form-control" [ngClass]="cssValidator(f.email)"
               formControlName="email" placeholder="e-mail" [(ngModel)]="evento.email">
               <div *ngIf="f.email.errors?.required && f.email.touched" class="invalid-feedback">
-                e-mail é obrigatório.
+                email is mandatory.
               </div>
               <div *ngIf="f.email.errors?.email && f.email.touched" class="invalid-feedback">
-                Deve ser um endereço de e-mail válido
+                Must be a valid email address.
               </div>
             </div>
 
@@ -75,11 +75,11 @@
         <div class="card-footer">
           <div class="d-flex">
             <button class="btn btn-outline-secondary mr-auto border" (click)="resetForm()">
-              Cancelar Alteração
+              Cancel change
             </button>
             <button class="btn btn-success" [disabled]="!form.valid" (click)="salvarEvento()">
               <!-- <span class="spinner-border spinner-border-sm mr-1"></span> -->
-              Salvar Evento
+              Save Event
             </button>
           </div>
         </div>
@@ -89,13 +89,13 @@
       <div class="p-3">
         <div class="d-flex border-bottom">
           <h2 class="mr-auto">
-            Lotes do Evento
+            Events Lots
           </h2>
           <h2>
             <i class="fas fa-money-bill-wave"></i>
           </h2>
         </div>
-        <p>Clique em Lote para adicionar e preencher novos Lotes</p>
+        <p>Click Lot to add and fill new lots</p>
         <div class="form-row p-1">
           <div [formGroup]="form" class="col">
             <div formArrayName="lotes" *ngFor="let lote of lotes.controls; let i=index">
@@ -110,7 +110,7 @@
               </legend>
               <div class="row">
                 <div class="form-group col-md-4">
-                  <label>Nome</label>
+                  <label>Name</label>
                   <input
                   [ngClass]="cssValidator(lotes.get(i+'.nome'))"
                   type="text"
@@ -119,14 +119,14 @@
                   placeholder="Lote">
                 </div>
                 <div class="form-group col-md-4">
-                  <label>Quantidade</label>
+                  <label>Quantity</label>
                   <input type="text" class="form-control"
                   [ngClass]="cssValidator(lotes.get(i+'.quantidade'))"
                   formControlName="quantidade"
                   placeholder="000">
                 </div>
                 <div class="form-group col-md-4">
-                  <label>Preço</label>
+                  <label>Price</label>
                   <input type="text"
                   currencyMask
                   [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',', align: 'left' }"
@@ -136,7 +136,7 @@
                   placeholder="R$ 0,00">
                 </div>
                 <div class="form-group col-md-4">
-                  <label>Data Início</label>
+                  <label>Start Date</label>
                   <input type="datetime" class="form-control"
                   bsDatepicker
                   value="{{lotes.get(i+'.dataInicio').value | date:'dd/MM/yyyy'}}"
@@ -144,7 +144,7 @@
                   (bsValueChange)="mudarValorData($event, i, 'dataInicio')">
                 </div>
                 <div class="form-group col-md-4">
-                  <label>Data Fim</label>
+                  <label>End Date</label>
                   <input type="datetime" class="form-control"
                   bsDatepicker
                   value="{{lotes.get(i+'.dataFim').value | date:'dd/MM/yyyy'}}"
@@ -158,16 +158,16 @@
       </div>
       <button (click)="adicionarLote()" class="d-flex btn btn-outline-primary">
         <i class="fa fa-plus-circle my-1"></i>
-        <b class="ml-1">Lote</b>
+        <b class="ml-1">Lot</b>
       </button>
     </div>
     <div class="card-footer">
       <div class="d-flex">
         <button class="btn btn-outline-secondary mr-auto border">
-          Cancelar Alteração
+          Cancel Change
         </button>
         <button [disabled]="!form.controls.lotes.valid" (click)="salvarLotes()" class="btn btn-success">
-          Salvar Lotes
+          Save Lots
         </button>
       </div>
     </div>
@@ -177,7 +177,7 @@
     <div class="p-3">
       <div class="d-flex border-bottom">
         <h2 class="mr-auto">
-          Redes Sociais do Evento
+          Event Social Networks
         </h2>
         <h2>
           <i class="fas fa-share-square"></i>
@@ -206,17 +206,17 @@
         <p class="card-text">
           <b>Local:</b> {{evento.local}}
           <br>
-          <b>Data:</b> {{evento.dataEvento | DateFormatPipe}}
+          <b>Date:</b> {{evento.dataEvento | DateFormatPipe}}
         </p>
         <hr>
         <p class="card-text">
-          <b>Contatos</b><br>
+          <b>Contacts</b><br>
           <small class="text-muted">Telefone: {{evento.telefone}}</small>
           <br>
           <small class="text-muted">e-mail: {{evento.email}}</small>
         </p>
         <p class="card-text">
-          Capacidade:
+          Capacity:
           <small class="text-muted">{{evento.qtdPessoas}}</small>
         </p>
         <div class="row">
@@ -239,8 +239,8 @@
 
 <ng-template #template>
   <div class="modal-body text-center">
-    <p>Tem certeza que quer deletar o lote {{this.loteAtual.nome}}?</p>
-    <button type="button" class="btn btn-default" (click)="confirmDeleteLote()">Sim</button>
-    <button type="button" class="btn btn-primary" (click)="declineDeleteLote()">Não</button>
+    <p>Are you sure you want to delete the lot {{this.loteAtual.nome}}?</p>
+    <button type="button" class="btn btn-default" (click)="confirmDeleteLote()">Yes</button>
+    <button type="button" class="btn btn-primary" (click)="declineDeleteLote()">No</button>
   </div>
 </ng-template>
