--- a/Front/ProEventos-App/src/app/components/palestrantes/palestrante-detalhe/palestrante-detalhe.component.html
+++ b/Front/ProEventos-App/src/app/components/palestrantes/palestrante-detalhe/palestrante-detalhe.component.html
@@ -1,7 +1,7 @@
 
 <form [formGroup]="form">
   <div class="form-group">
-    <label>Minicurrículo</label>
+    <label>Mini resume</label>
     <textarea type="text" formControlName="miniCurriculo" class="form-control"
     [ngClass]="{'is-invalid': f.miniCurriculo.errors && f.miniCurriculo.touched }"></textarea>
     <small class="form-text"
