--- a/Front/ProEventos-App/src/app/components/redesSociais/redesSociais.component.html
+++ b/Front/ProEventos-App/src/app/components/redesSociais/redesSociais.component.html
@@ -1,4 +1,4 @@
-<p>Clique em Rede Social para adicionar e preencher novas Redes Sociais</p>
+<p>Click Social Network to add and populate new Social Networks</p>
 <div class="form-row p-1">
   <div [formGroup]="formRS" class="col">
     <div formArrayName="redesSociais" *ngFor="let redeSocial of redesSociais.controls; let i=index">
@@ -9,9 +9,9 @@
         </legend>
         <div class="row">
           <div class="form-group col-md-4">
-            <label>Nome</label>
+            <label>Name</label>
             <select class="form-control" [ngClass]="cssValidator(redesSociais.get(i+'.nome'))" formControlName="nome">
-              <option value="">Selecione</option>
+              <option value="">Select</option>
               <option value="fab fa-youtube">Youtube</option>
               <option value="fab fa-instagram">Instagram</option>
               <option value="fab fa-facebook">Facebook</option>
@@ -35,7 +35,7 @@
     </div>
     <button (click)="adicionarRedeSocial()" class="d-flex btn btn-outline-primary">
       <i class="fa fa-plus-circle my-1"></i>
-      <b class="ml-1">Rede Social</b>
+      <b class="ml-1">Social Network</b>
     </button>
   </div>
 </div>
@@ -43,10 +43,10 @@
 <div class="card-footer">
   <div class="d-flex">
     <button class="btn btn-outline-secondary mr-auto border">
-      Cancelar Alteração
+      Cancel Change
     </button>
     <button [disabled]="!formRS.controls.redesSociais.valid" (click)="salvarRedesSociais()" class="btn btn-success">
-      Salvar Redes Sociais
+      Save Social Network
     </button>
   </div>
 </div>
