--- a/Front/ProEventos-App/src/app/components/user/registration/registration.component.html
+++ b/Front/ProEventos-App/src/app/components/user/registration/registration.component.html
@@ -15,19 +15,19 @@
       </div>
       <div class="form-row">
         <div class="form-group col-sm-6">
-          <label>Primeiro Nome</label>
+          <label>First Name</label>
           <input type="text" class="form-control" formControlName="primeiroNome"
             [ngClass]="{'is-invalid': f.primeiroNome.errors && f.primeiroNome.touched}" placeholder="Insira o Primeiro nome" />
           <div class="invalid-feedback">
-            Primeiro Nome é obrigatório.
+            First Name is mandatory.
           </div>
         </div>
         <div class="form-group col-sm-6">
-          <label>Último nome</label>
+          <label>Last Name</label>
           <input type="text" class="form-control" formControlName="ultimoNome"
             [ngClass]="{'is-invalid': f.ultimoNome.errors && f.ultimoNome.touched}" placeholder="Insira o Último nome" />
           <div class="invalid-feedback">
-            Último Nome é obrigatório.
+            Last Name is mandatory.
           </div>
         </div>
       </div>
@@ -36,7 +36,7 @@
         <input class="form-control" type="text" formControlName="email"
           [ngClass]="{'is-invalid': f.email.errors && f.email.touched}" placeholder="Insira o Nome Completo" />
         <div *ngIf="f.email.errors?.required && f.email.touched" class="invalid-feedback">
-          e-mail é obrigatório.
+          email is mandatory.
         </div>
         <div *ngIf="f.email.errors?.email && f.email.touched" class="invalid-feedback">
           Deve ser um e-mail válido.
